Solved div align

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -56,7 +56,7 @@ body {
 }
 
 .navbar-nav {
-    background-color: rgba(0, 0, 0, 0.750);
+    background-color: rgba(55, 2, 73, 0.75);
     padding: 1em;
     border-radius: 0.3em;
 }
